--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="recipes/potato_salad.html" target="_blank" rel="noopener noreferrer">Potato Salad</a></li>
+        <li><a href="recipes/grilled_cheese_sandwich.html" target="_blank" rel="noopener noreferrer">Grilled Cheese Sandwich</a></li>
+        <li><a href="recipes/chicken_salad.html" target="_blank" rel="noopener noreferrer">Chicken Salad</a></li>
+    </ul>
 </body>
 </html>
