--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
+    <ul class="index-ul">
         <li><a href="recipes/potato_salad.html" target="_blank" rel="noopener noreferrer">Potato Salad</a></li>
         <li><a href="recipes/grilled_cheese_sandwich.html" target="_blank" rel="noopener noreferrer">Grilled Cheese Sandwich</a></li>
         <li><a href="recipes/chicken_salad.html" target="_blank" rel="noopener noreferrer">Chicken Salad</a></li>
